src/objects/Purposes__c.object
<CustomObject>
    <description>T-479704</description>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <description>T-479704</description>
        <label>Academic Program</label>
        <picklist>
            <picklistValues>
                <fullName>Unrestricted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>T-479704</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T-479704</description>
        <label>Endowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expendable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T-479704</description>
        <label>Expendable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Known_Amount__c</fullName>
        <label>Known Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Giving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-479704</description>
        <label>Planned Giving</label>
        <referenceTo>rC_Giving__Planned_Giving__c</referenceTo>
        <relationshipLabel>Purposes</relationshipLabel>
        <relationshipName>Purposes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unknown_Amount_Estimate__c</fullName>
        <label>Unknown Amount/Estimate</label>
        <picklist>
            <picklistValues>
                <fullName>No Indication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate $1,000-$99,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate $100,000-$499,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate $500,000-$999,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate $1,000,000-$9,999,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate $10,000,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Purposes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Purpose-{000000}</displayFormat>
        <label>Purposes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purposes</pluralLabel>
    <recordTypes>
        <fullName>Planned_Giving</fullName>
        <active>true</active>
        <description>T-479704</description>
        <label>Planned Giving</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Known_and_Unknown_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     NOT( ISBLANK( TEXT( Unknown_Amount_Estimate__c ))) ,
     NOT( ISBLANK( Known_Amount__c ) )
     )</errorConditionFormula>
        <errorMessage>Known and Unknown Amount cannot be chosen together.</errorMessage>
    </validationRules>
</CustomObject>